<resources>
    <string name="app_name">CloudMare</string>
    <string name="title_zone_list_activity">Zones</string>
    <string name="title_user_activity">User</string>
    <string name="category_under_attack_mode">Under Attack Mode</string>
    <string name="category_development_mode">Development Mode</string>
    <string name="category_dns">DNS</string>
    <string name="category_page_rules">Page Rules</string>
    <string name="category_ssl">SSL / TLS</string>
    <string name="category_analytics">Analytics</string>
    <string name="category_caching">Caching</string>
    <string name="info_under_attack_mode">Show visitors a JavaScript challenge when visiting your site.</string>
    <string name="info_development_mode">Temporarily bypass cache. See changes to your origin server in realtime.</string>
    <string name="info_dns">Manage your Domain Name System (DNS) settings</string>
    <string name="info_page_rules">Toggle on and off settings by URL</string>
    <string name="info_ssl">Manage cryptography settings for your website</string>
    <string name="info_analytics">Gain an insight on your data</string>
    <string name="info_caching">Manage caching settings for your website</string>
    <string name="caching_level_title">Caching Level</string>
    <string name="caching_level_info">Determine how much of your website’s static content you want Cloudflare to cache. Increased caching can speed up page load time.</string>
    <string name="caching_expiration_title">Browser Cache Expiration</string>
    <string name="caching_expiration_info">Determine the length of time Cloudflare instructs a visitor’s browser to cache files. During this period, the browser loads the files from its local cache, speeding up page loads.</string>
    <string name="dns_record_list_search_hint">Start typing to search...</string>
    <string name="dns_record_list_none_found">No dns records found</string>
    <string name="type_a">A</string>
    <string name="type_aaaa">AAAA</string>
    <string name="type_cname">CNAME</string>
    <string name="type_mx">MX</string>
    <string name="type_loc">LOC</string>
    <string name="type_srv">SRV</string>
    <string name="type_spf">SPF</string>
    <string name="type_txt">TXT</string>
    <string name="type_ns">NS</string>
    <string name="type_caa">CAA</string>
    <string name="type_ptr">PTR</string>
    <string name="type_cert">CERT</string>
    <string name="type_dnskey">DNSKEY</string>
    <string name="type_ds">DS</string>
    <string name="type_naptr">NAPTR</string>
    <string name="type_smimea">SMIMEA</string>
    <string name="type_sshfp">SSHFP</string>
    <string name="type_tlsa">TLSA</string>
    <string name="type_uri">URI</string>
    <string-array name="entries_dns_record_type">
        <item>@string/type_a</item>
        <item>@string/type_aaaa</item>
        <item>@string/type_cname</item>
        <item>@string/type_mx</item>
        <item>@string/type_loc</item>
        <item>@string/type_srv</item>
        <item>@string/type_spf</item>
        <item>@string/type_txt</item>
        <item>@string/type_ns</item>
        <item>@string/type_caa</item>
        <item>@string/type_ptr</item>
        <item>@string/type_cert</item>
        <item>@string/type_dnskey</item>
        <item>@string/type_ds</item>
        <item>@string/type_naptr</item>
        <item>@string/type_smimea</item>
        <item>@string/type_sshfp</item>
        <item>@string/type_tlsa</item>
        <item>@string/type_uri</item>
    </string-array>
    <string name="dns_record_type">Type</string>
    <string name="dns_record_name">Name</string>
    <string name="dns_record_content">Content</string>
    <string name="dns_record_ttl">TTL</string>
    <string name="dns_record_priority">Priority</string>
    <string name="dns_record_priority_hint">0 to 65535</string>
    <string name="zone_list_none_found">No zones found</string>
    <string name="page_rules_none_found">No page rules found</string>
    <string name="ssl_encryption_mode">SSL Encryption Mode</string>
    <string name="network_pseudo_ipv4_title">Pseudo IPv4</string>
    <string name="network_pseudo_ipv4_info">Adds an IPv4 header to requests when a client is using IPv6, but the server only supports IPv4.</string>
    <string name="user_cloudflare_email">Cloudflare Email</string>
    <string name="user_cloudflare_global_api_key_or_token">Token or Global API Key</string>
    <string name="user_save">SAVE</string>
    <string name="user_help">HELP</string>
    <string name="user_instructions">To generate an API Token log in to dash.cloudflare.com/profile/api-tokens and click on \'Create Token\'
    </string>
    <string name="user_required_token_permissions">Required API Token Permissions: All zones | Zone Settings:Edit | Zone:Edit | Cache Purge:Edit | Page Rules:Edit | DNS:Edit | Analytics:Read
    </string>
    <string name="user_additional_info">Need more help? For a more in-depth guide go to cloudmare.jtsalva.dev/help</string>
    <string name="user_cloudflare_email_label">Email</string>
    <string name="user_api_key_or_token_label">API Token or Key</string>
    <string name="user_api_key_label">API Key</string>
    <string name="user_api_token_label">API Token</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_settings">Preferences</string>
    <string name="menu_user">User</string>
    <string name="menu_search">Search</string>
    <string name="menu_sort_by">Sort By</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_save">Save</string>
    <string name="menu_add">Add</string>
    <string name="analytics_axis_title_requests">Num of Requests</string>
    <string name="analytics_axis_title_bandwidth">Bandwidth (Bytes)</string>
    <string name="analytics_axis_title_threats">Num of Threats</string>
    <string name="analytics_axis_title_pageviews">Num of Pageviews</string>
    <string name="ttl_respect_existing_headers">Respect Existing Headers</string>
    <string name="ttl_automatic">AUTOMATIC</string>
    <string name="ttl_two_minutes">2 minutes</string>
    <string name="ttl_five_minutes">5 minutes</string>
    <string name="ttl_ten_minutes">10 minutes</string>
    <string name="ttl_fifteen_minutes">15 minutes</string>
    <string name="ttl_thirty_minutes">30 minutes</string>
    <string name="ttl_one_hours">1 hour</string>
    <string name="ttl_two_hours">2 hours</string>
    <string name="ttl_three_hours">3 hours</string>
    <string name="ttl_four_hours">4 hours</string>
    <string name="ttl_five_hours">5 hours</string>
    <string name="ttl_eight_hours">8 hours</string>
    <string name="ttl_twelve_hours">12 hour</string>
    <string name="ttl_sixteen_hours">16 hours</string>
    <string name="ttl_twenty_hours">20 hours</string>
    <string name="ttl_one_days">1 day</string>
    <string name="ttl_two_days">2 days</string>
    <string name="ttl_three_days">3 days</string>
    <string name="ttl_four_days">4 days</string>
    <string name="ttl_five_days">5 days</string>
    <string name="ttl_eight_days">8 days</string>
    <string name="ttl_sixteen_days">16 days</string>
    <string name="ttl_twenty_four_days">24 days</string>
    <string name="ttl_one_months">1 month</string>
    <string name="ttl_two_months">2 months</string>
    <string name="ttl_six_months">6 months</string>
    <string name="ttl_one_years">1 year</string>
    <string-array name="entries_dns_record_ttl">
        <item>@string/ttl_automatic</item>
        <item>@string/ttl_two_minutes</item>
        <item>@string/ttl_five_minutes</item>
        <item>@string/ttl_ten_minutes</item>
        <item>@string/ttl_fifteen_minutes</item>
        <item>@string/ttl_thirty_minutes</item>
        <item>@string/ttl_one_hours</item>
        <item>@string/ttl_two_hours</item>
        <item>@string/ttl_five_hours</item>
        <item>@string/ttl_twelve_hours</item>
        <item>@string/ttl_one_days</item>
    </string-array>
    <string name="ssl_mode_off">Off (not secure)</string>
    <string name="ssl_mode_flexible">Flexible</string>
    <string name="ssl_mode_full">Full</string>
    <string name="ssl_mode_full_strict">Full (strict)</string>
    <string-array name="entries_ssl_modes">
        <item>@string/ssl_mode_off</item>
        <item>@string/ssl_mode_flexible</item>
        <item>@string/ssl_mode_full</item>
        <item>@string/ssl_mode_full_strict</item>
    </string-array>
    <string name="ssl_mode_info_off">Off - No encryption applied</string>
    <string name="ssl_mode_info_flexible">Flexible - Encrypts traffic between the browser and Cloudflare</string>
    <string name="ssl_mode_info_full">Full - Encrypts end-to-end, using a self signed certificate on the server</string>
    <string name="ssl_mode_info_full_strict">Full (strict) - Encrypts end-to-end, but requires a trusted CA or Cloudflare Origin CA certificate on the server</string>
    <string name="dns_record_list_sort_by_type">Type</string>
    <string name="dns_record_list_sort_by_name">Name</string>
    <string name="dns_record_list_sort_by_content">Content</string>
    <string name="dns_record_list_sort_by_ttl">TTL</string>
    <string name="dns_record_list_sort_by_proxied">Proxied</string>
    <string-array name="entries_dns_record_list_sort_by">
        <item>@string/dns_record_list_sort_by_type</item>
        <item>@string/dns_record_list_sort_by_name</item>
        <item>@string/dns_record_list_sort_by_content</item>
        <item>@string/dns_record_list_sort_by_ttl</item>
        <item>@string/dns_record_list_sort_by_proxied</item>
    </string-array>
    <string name="cache_level_basic">No query string</string>
    <string name="cache_level_simplified">Ignore query string</string>
    <string name="cache_level_aggressive">Standard</string>
    <string-array name="entries_cache_level">
        <item>@string/cache_level_basic</item>
        <item>@string/cache_level_simplified</item>
        <item>@string/cache_level_aggressive</item>
    </string-array>
    <string-array name="entries_browser_cache_ttl">
        <item>@string/ttl_respect_existing_headers</item>
        <item>@string/ttl_thirty_minutes</item>
        <item>@string/ttl_one_hours</item>
        <item>@string/ttl_two_hours</item>
        <item>@string/ttl_three_hours</item>
        <item>@string/ttl_four_hours</item>
        <item>@string/ttl_five_hours</item>
        <item>@string/ttl_eight_hours</item>
        <item>@string/ttl_twelve_hours</item>
        <item>@string/ttl_sixteen_hours</item>
        <item>@string/ttl_twenty_hours</item>
        <item>@string/ttl_one_days</item>
        <item>@string/ttl_two_days</item>
        <item>@string/ttl_three_days</item>
        <item>@string/ttl_four_days</item>
        <item>@string/ttl_five_days</item>
        <item>@string/ttl_eight_days</item>
        <item>@string/ttl_sixteen_days</item>
        <item>@string/ttl_twenty_four_days</item>
        <item>@string/ttl_one_months</item>
        <item>@string/ttl_two_months</item>
        <item>@string/ttl_six_months</item>
        <item>@string/ttl_one_years</item>
    </string-array>
    <string name="analytics_dashboard_category_requests">Requests</string>
    <string name="analytics_dashboard_category_bandwidth">Bandwidth</string>
    <string name="analytics_dashboard_category_threats">Threats</string>
    <string name="analytics_dashboard_category_pageviews">Pageviews</string>
    <string-array name="entries_analytics_dashboard_categories">
        <item>@string/analytics_dashboard_category_requests</item>
        <item>@string/analytics_dashboard_category_bandwidth</item>
        <item>@string/analytics_dashboard_category_threats</item>
        <item>@string/analytics_dashboard_category_pageviews</item>
    </string-array>
    <string name="analytics_dashboard_time_period_one_day">24 Hours</string>
    <string name="analytics_dashboard_time_period_one_week">7 Days</string>
</resources>