<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_contact"
        android:icon="@drawable/baseline_contact_support_white_48"
        android:title="@string/menu_contact"
        android:visible="false"
        app:showAsAction="always"
            tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/action_theme"
        android:icon="@drawable/baseline_brightness_4_white_48"
        android:title="@string/menu_theme"
        android:visible="false"
        app:showAsAction="always"
            tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/action_user_activity"
        android:icon="@drawable/baseline_account_circle_white_48"
        android:title="@string/menu_user"
        android:visible="false"
        app:showAsAction="always"
            tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/baseline_search_white_48"
        android:title="@string/menu_search"
        android:visible="false"
        app:showAsAction="always"
            tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/action_sort_by"
        android:icon="@drawable/baseline_sort_by_alpha_white_48"
        android:title="@string/menu_sort_by"
        android:visible="false"
        app:showAsAction="always"
            tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/baseline_delete_white_48"
        android:title="@string/menu_delete"
        android:visible="false"
        app:showAsAction="always"
            tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/action_save"
        android:icon="@drawable/baseline_backup_white_48"
        android:title="@string/menu_save"
        android:visible="false"
        app:showAsAction="always"
            tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/baseline_add_white_48"
        android:title="@string/menu_add"
        android:visible="false"
        app:showAsAction="always"
            tools:ignore="AlwaysShowAction" />
</menu>