<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".DomainDashActivity">
    <data>
        <variable
                name="viewModel"
                type="dev.jtsalva.cloudmare.viewmodel.DomainDashViewModel" />
    </data>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <include
                    android:id="@+id/toolbar"
                    layout="@layout/toolbar" />

            <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingTop="20dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/toolbar">

                <dev.jtsalva.cloudmare.view.SwitchOptionView
                        android:id="@+id/under_attack_mode_item"
                        app:checked="@={viewModel.underAttackModeEnabled}"
                        app:info="@string/info_under_attack_mode"
                        app:title="@string/category_under_attack_mode" />

                <dev.jtsalva.cloudmare.view.SwitchOptionView
                        android:id="@+id/development_mode_item"
                        app:checked="@={viewModel.developmentModeEnabled}"
                        app:info="@string/info_development_mode"
                        app:title="@string/category_development_mode" />

                <dev.jtsalva.cloudmare.view.ButtonOptionView
                        android:id="@+id/dns_item"
                        app:info="@string/info_dns"
                        app:title="@string/category_dns" />

            </TableLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>