<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".CachingActivity">
    <data>
        <variable
                name="viewModel"
                type="dev.jtsalva.cloudmare.viewmodel.CachingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent">

        <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar" />

        <include
                layout="@layout/progress_bar" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/swipe_refresh"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar">
            <ScrollView
                    android:id="@+id/caching_view_group"
                    android:visibility="invisible"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:visibility="visible">

                <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="20dp"
                        android:paddingTop="20dp"
                        android:paddingRight="20dp"
                        android:paddingBottom="20dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/cache_level_item">
                        <TextView
                                android:id="@+id/cache_level_title_text_view"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:textSize="24dp"
                                android:text="@string/caching_level_title"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                        <androidx.appcompat.widget.AppCompatSpinner
                                android:id="@+id/cache_level_spinner"
                                android:layout_width="0dp"
                                android:layout_height="50dp"
                                android:entries="@array/entries_cache_level"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/cache_level_title_text_view" />
                        <TextView
                                android:id="@+id/cache_level_info_text_view"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:textSize="16dp"
                                android:text="@string/caching_level_info"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/cache_level_spinner" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/browser_cache_expiration_item">

                        <TextView
                                android:id="@+id/browser_cache_expiration_title_text_view"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginTop="10dp"
                                android:text="@string/caching_expiration_title"
                                android:textSize="24dp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                        <androidx.appcompat.widget.AppCompatSpinner
                                android:id="@+id/browser_cache_ttl_spinner"
                                android:layout_width="0dp"
                                android:layout_height="50dp"
                                android:entries="@array/entries_cache_level"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/browser_cache_expiration_title_text_view" />

                        <TextView
                                android:id="@+id/browser_cache_ttl_info_text_view"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:paddingBottom="10dp"
                                android:text="@string/caching_expiration_info"
                                android:textSize="16dp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/browser_cache_ttl_spinner" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <dev.jtsalva.cloudmare.view.SwitchOptionView
                            android:id="@+id/always_online_item"
                            app:checked="@={viewModel.alwaysOnline}"
                            app:info="If your server goes down, Cloudflare will serve your website’s static pages from their cache."
                            app:title="Always Online™" />

                    <dev.jtsalva.cloudmare.view.ButtonOptionView
                            android:id="@+id/purge_everything_item"
                            android:paddingTop="10dp"
                            app:info="Clear cached files to force Cloudflare to fetch a fresh version of those files from your web server."
                            app:title="Purge Everything" />

                </TableLayout>

            </ScrollView>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>